@startuml
'https://plantuml.com/class-diagram
hide circle
skinparam classAttributeIconSize 0
abstract class "{abstract} \n Command" {
    #input: String
    #outputMessage: String
    #isExit: boolean = false
    +Command()
    +Command(String)
    +execute(...)
    +isExit(): boolean
    +getOutputMessage(): Strong
    +getCommandType(): CommandType
}
class DifferentCommands
enum CommandType {
CREATE
READ
UPDATE
DELETE
EXIT
COMPARE
}

' Define the other classes
class Income
class ExpenseList

class FinanceException
DifferentCommands -up-|> "{abstract} \n Command"
"{abstract} \n Command" ..> "0..*" Income:  uses
"{abstract} \n Command" ..> "1" ExpenseList: uses
"{abstract} \n Command" --> "1" CommandType: commandType
"{abstract} \n Command" ..> FinanceException: throws

' Add a note for clarification
note top of DifferentCommands
  DifferentCommands is not a class name.
  It is a placeholder for different command types.
end note

@enduml